[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Players/player_controller.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleShape" id=2]
radius = 1.1
height = 1.1

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 0.237138, 1 )

[node name="player_controller" type="KinematicBody"]
script = ExtResource( 1 )

[node name="player_light" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.33162, 0 )

[node name="collision_body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="kill_box" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="kill_box"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="collision_feet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.186, 0 )
shape = SubResource( 3 )

[node name="player_model" type="Spatial" parent="."]

[node name="CSGSphere" type="CSGSphere" parent="player_model"]

[node name="rotation_helper" type="Spatial" parent="."]

[node name="player_camera" type="Camera" parent="rotation_helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.991563, 2.7294 )

[node name="grab_objects_node" type="Spatial" parent="rotation_helper"]

[node name="player_hud" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crosshair" type="TextureRect" parent="player_hud"]
margin_right = 40.0
margin_bottom = 40.0
